--- a/project.private.config.json
+++ b/project.private.config.json
@@ -20,66 +20,5 @@
     "ignoreDevUnusedFiles": true
   },
   "libVersion": "3.10.0",
-  "condition": {
-    "miniprogram": {
-      "list": [
-        {
-          "name": "pages/newQuestion/newQuestion",
-          "pathName": "pages/newQuestion/newQuestion",
-          "query": "",
-          "scene": null,
-          "launchMode": "default"
-        },
-        {
-          "name": "components-demo/questions/questions",
-          "pathName": "components-demo/questions/questions",
-          "query": "",
-          "launchMode": "default",
-          "scene": null
-        },
-        {
-          "name": "components-demo/pagination/pagination",
-          "pathName": "components-demo/pagination/pagination",
-          "query": "",
-          "launchMode": "default",
-          "scene": null
-        },
-        {
-          "name": "components-demo/captcha/captcha",
-          "pathName": "components-demo/captcha/captcha",
-          "query": "",
-          "launchMode": "default",
-          "scene": null
-        },
-        {
-          "name": "pages/login/login",
-          "pathName": "pages/login/login",
-          "query": "",
-          "launchMode": "default",
-          "scene": null
-        },
-        {
-          "name": "components-demo/input-group/input-group",
-          "pathName": "components-demo/input-group/input-group",
-          "query": "",
-          "launchMode": "default",
-          "scene": null
-        },
-        {
-          "name": "components-demo/images-input/images-input",
-          "pathName": "components-demo/images-input/images-input",
-          "query": "",
-          "launchMode": "default",
-          "scene": null
-        },
-        {
-          "name": "components-demo/subjects-selector/subjects-selector",
-          "pathName": "components-demo/subjects-selector/subjects-selector",
-          "query": "",
-          "launchMode": "default",
-          "scene": null
-        }
-      ]
-    }
-  }
+  "condition": {}
 }
